--- a/MyLibrary/MyLibrary/MyLibrary.vcxproj
+++ b/MyLibrary/MyLibrary/MyLibrary.vcxproj
@@ -78,7 +78,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="permutation.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sorting.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="permutation.h" />
+    <ClInclude Include="sorting.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\permutation.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
